New combinations without certain letter

--- a/src/utils/generator.ipynb
+++ b/src/utils/generator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
     "from datetime import datetime\n",
     "\n",
     "# Define consonants and vowels\n",
-    "consonants = 'БВГДЃЖЗЈКЛМНПРСТФХЦЧШ'  # example consonants\n",
+    "consonants = 'БВГДЖЗЈКЛМНПРСТФХЦЧШ'  # example consonants\n",
     "vowels = 'АЕИОУ'  # example vowels\n",
     "\n",
     "def shuffle(array):\n",
